icon gap fixing

--- a/css/style.css
+++ b/css/style.css
@@ -2577,7 +2577,8 @@ h1+.heading-divider, h3+.heading-divider {
 }
 
 .icon.icon-size-4 {
-	font-size: 40px
+	font-size: 40px;
+	display: flex;
 }
 
 .icon.icon-size-4.icon-rounded, .icon.icon-size-4.icon-square {
